[fix] fix batch information updating issue