@@ -5,6 +5,7 @@ import client.jobmanage.util.seek.JobSeekUtil;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.io.BufferedReader;
 import java.io.File;
 
 /**
@@ -12,8 +13,10 @@ import java.io.File;
  */
 public class JobCallingUtil {
     private static final Logger LOG = LoggerFactory.getLogger(JobCallingUtil.class);
+
     /**
      * Compile a job by job id
+     *
      * @param jobId job id
      */
     public static void compileJobById(int jobId) {
@@ -42,6 +45,7 @@ public class JobCallingUtil {
 
     /**
      * Compile a job by job name
+     *
      * @param jobName job name
      */
     public static void compileJobByName(String jobName) {
@@ -57,6 +61,7 @@ public class JobCallingUtil {
 
     /**
      * Start a job by job id
+     *
      * @param jobId job id
      */
     public static void startJobById(int jobId) {
@@ -70,19 +75,28 @@ public class JobCallingUtil {
             return;
         }
 
-        String runningCommand = String.format("java -classpath \"%s;%s/morph-clients.jar;%s/morph-common.jar;%s/morph-core.jar\" %s",
-                jobCodeFolder,
-                Util.compileDependencyDirectory,
-                Util.compileDependencyDirectory,
-                Util.compileDependencyDirectory,
-                jobName
-        );
+        String classpathSeparator = System.getProperty("os.name").toLowerCase().contains("win") ? ";" : ":";
 
         // start the job
         try {
             LOG.info("Starting job: " + jobName);
-            Process process = Runtime.getRuntime().exec(runningCommand);
-             process.waitFor();  // wait for the process to finish
+            ProcessBuilder builder = new ProcessBuilder(
+                    "java", "-classpath",
+                    jobCodeFolder + classpathSeparator +
+                            Util.compileDependencyDirectory + "/morph-clients.jar" + classpathSeparator +
+                            Util.compileDependencyDirectory + "/morph-common.jar" + classpathSeparator +
+                            Util.compileDependencyDirectory + "/morph-core.jar",
+                    jobName
+            );
+            builder.redirectErrorStream(true);
+            Process process = builder.start();
+
+            BufferedReader reader = new BufferedReader(new java.io.InputStreamReader(process.getInputStream()));
+            String line;
+            while ((line = reader.readLine()) != null) {
+                LOG.info(line);
+            }
+            process.waitFor();  // wait for the process to finish
         } catch (Exception e) {
             e.printStackTrace();
             throw new RuntimeException("Failed to start job: " + e.getMessage());
@@ -91,6 +105,7 @@ public class JobCallingUtil {
 
     /**
      * Start a job by job name
+     *
      * @param jobName job name
      */
     public static void startJobByName(String jobName) {
